--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -468,7 +468,7 @@ h2 {
 
 .fh5co-portfolio {
   background-color: #000000;
-  background-image: url(../img/dreamer2.png);
+  background-image: url(../img/camera-bg.jpg);
   background-position: right bottom;
   background-repeat: no-repeat;
   padding: 100px 0;
