--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -467,7 +467,7 @@ h2 {
       margin-top: 100px; } }
 
 .fh5co-portfolio {
-  background-color: #ff4d00;
+  background-color: #000000;
   background-image: url(../img/dmbw.png);
   background-position: right bottom;
   background-repeat: no-repeat;
