--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -802,8 +802,8 @@ footer {
       padding: 40px 0; } }
 
 .blog-content-inner {
-  background-color: #f2d5d7;
-  background-color: #f74102;
+  background-color: #000000;
+  background-color: #000000;
   padding: 70px;
   border-radius: 15px; }
   .blog-content-inner .card-title {
