--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -519,7 +519,7 @@ h2 {
         float: left !important; } }
 
 .activity {
-  background: #f3e7e8;
+  background: #000000;
   padding-bottom: 50px; }
   .activity .recent {
     margin-top: 0; }
