--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -526,7 +526,7 @@ h2 {
   .activity h2 {
     color: #584f53; }
   .activity .owl-carousel .owl-nav .owl-prev, .activity .owl-carousel .owl-nav .owl-next {
-    color: #212020;
+    color: #00f0fc;
     border-color: #212020; }
     .activity .owl-carousel .owl-nav .owl-prev:hover, .activity .owl-carousel .owl-nav .owl-next:hover {
       background: #212020;
