--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -678,7 +678,7 @@ h2 {
   .twit-box p {
     color: #666666; }
   .twit-box a {
-    background-color: #000000;
+    background-color: #ffffff;
     border-color: #800080;
     width: 120px;
     padding: 5px 0;
