--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -454,7 +454,7 @@ h2 {
     border-radius: 15px;
     background: -webkit-linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.85));
     background: -moz-linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.85));
-    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0%));
+    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0));
     background: -ms-linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.85));
     background: -o-linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.85)); }
   .recent .heart {
