--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -653,7 +653,7 @@ h2 {
 
 .fh5co-insta-feed {
   padding: 100px 0;
-  background: #000000; }
+  background: #fff; }
   .fh5co-insta-feed .card {
     box-shadow: none; }
     .fh5co-insta-feed .card .card-img-overlay {
