--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,7 +75,7 @@ h2 {
         font-size: 16px;
         text-transform: uppercase;
         padding: 7px 10px;
-        color: #fff; }
+        color: #000000; }
     .maine-menu .collapse.show {
       background: rgba(0, 0, 0, 0.5); } }
 
